--- a/2_Practice_Assigments/4_Styling/style.css
+++ b/2_Practice_Assigments/4_Styling/style.css
@@ -2,7 +2,7 @@
     font-family: 'Preahvihear', sans-serif;    
 }
 
-.container1{    
+/* .container1{    
     background-color: black;
     color: white;
     margin: 1%;
@@ -40,4 +40,38 @@ h3{
     text-align: right;
     text-decoration: underline;
     margin: 20px;
+} */
+
+
+h1{
+    text-align: left;
+    margin: 10px;
+    background-color: black;
+    color: white;
+    padding: 20px;
+}
+
+
+h2{
+    text-align: center;
+    font-style: italic;
+    font-weight: lighter;
+    font-size: xx-large;
+    margin: 10px;
+    background-color: #663399;
+    color: white;
+    padding: 20px;
+
+
+}
+
+h3{
+    text-align: right;
+    color: #3a366f;
+    text-decoration: underline;
+    margin: 10px;
+    background-color: #9fc5f8;
+    padding: 20px;
+    font-size: x-large;
+
 }
