--- a/3_Examples/Example_life/style.css
+++ b/3_Examples/Example_life/style.css
@@ -1,44 +1,44 @@
 .container{
-  width: 950px;
-  background-color: silver;
-  margin: 0px auto;
-  padding: 20px;
+   width: 950px;
+   background-color: silver;
+   margin: 0px auto;
+   padding: 1%;
+
 }
 .top-nav {
-  height: 150px;
-  background-color: green;
+   height: 150px;
+   background-color: green;
 }
 .side-nav {
-  height: 300px;
-  width: 200px;
-  background-color: blue;
-  display: inline-block;
-  margin-top: 20px;
-
+   height: 300px;
+   width: 200px;
+   background-color: blue;
+   margin-top: 2.5%;
+   display: inline-block; /*Line to arrange blocks in line */
 }
 .main {
-  height: 400px;
-  width: 700px;
-  background-color: red;
-  display: inline-block;
-  padding: 10px;
-  margin-top: 20px;
-  margin-LEFT: 25px;
+   height: 400px;
+   width: 700px;
+   background-color: red;
+   margin: 2.5% 0 0 auto; /*Line to alling block to the right*/
+   display: inline-block; /*Line to arrange blocks in line */
+   padding: 1%;
+   
 }
-
 .sub-content {
-  height: 200px;
-  width: 210px;
-  background-color: yellow;
-  display: inline-block;
-  margin: 5px;
-}
+   height: 200px;
+   width: 210px;
+   background-color: yellow;
+   margin: 1%;
 
+}
 #advertisement {
-  height: 120px;
-  width: 660px;
-  background-color: purple;
-  margin-top: 20px;
+   height: 120px;
+   width: 660px;
+   background-color: purple;
+   margin: 2% 1% 1% 1%;
+}
+.row {
+ display: flex;
 }
 
-*{vertical-align: top;}
