--- a/3_Examples/Example_life_Boxmodel_absolute_relative_Kevin/style.css
+++ b/3_Examples/Example_life_Boxmodel_absolute_relative_Kevin/style.css
@@ -17,6 +17,8 @@ h1 {
   bottom: 0;
   right: 0;
   margin: 0;
+  box-shadow: 5PX 10PX 0PX black; 
+  border: 2px inset black;
   /* left: 50%;
   top: 50%;
   transform: translate(-50%, -50%); */
