New Changes 13-08-2023 7:37 pm

--- a/2_Practice_Assigments/7_Flex_Nav_bar/style.css
+++ b/2_Practice_Assigments/7_Flex_Nav_bar/style.css
@@ -32,7 +32,9 @@ li, a {
 margin: 0;
 display: inline-block;
 width: 50%;
-color: #fefefe;}
+color: #fefefe;
+/* flex: 1; */
+}
 
 .nav-links{
     margin: 2% 2% 2% 2%;
@@ -41,6 +43,7 @@ color: #fefefe;}
     width: 50%;
     display: flex;
     justify-content: space-between;
+    /* flex: 1; */
 }
 
 
