--- a/3_Examples/Example_life/style.css
+++ b/3_Examples/Example_life/style.css
@@ -1,12 +1,22 @@
-
-#dojo {
-   width: 400px;
-   height: 200px;
-   background-color: grey;
-   display: flex;
-   align-items: center;
-   align-items: end;
-   justify-content: space-evenly;
-   /* justify-content: space-between; */
+.row {
+display: flex;
 }
+.col {
+flex: 1;
+background-color: aqua;
+margin:1px;
+border: 2px solid;
+}
+
+.col-2{flex: 2;
+   background-color: yellow;
+   margin:0px;
+   margin:1px;
+   border: 2px solid;}
+
+.col-3{flex: 3;
+   background-color: red;
+   margin:0px;
+   margin:1px;
+   border: 2px solid;}
 
