--- a/3_Examples/Example_life/style.css
+++ b/3_Examples/Example_life/style.css
@@ -7,12 +7,12 @@
 
 
  .ContainerParent{
-  width: 66%;
-  height: 450px;
+  width: 70%;
+  height: 550px;
   border: 1% solid #e8e8e8;
   margin: 5% auto;
   position: relative;
-  border: 3px solid #e4e4e4;
+  border: 4px solid #e4e4e4;
   /* background: linear-gradient(to bottom,#17a2b8 30%,#ffff 30% 100%); */
 
 }
@@ -20,7 +20,7 @@
 
 #ContainerChildTop{
   background-color: #17a2b8;
-  height: 100px;
+  height: 130px;
 
 }
 #ContainerChildBottom{
@@ -37,7 +37,7 @@
   height: 40%;
   border-radius: 50%;
   padding: 1%;
-  border: 2px solid #cfcfcf;
+  border: 4px solid #cfcfcf;
   /* filter: invert(100%); */
   background-image: linear-gradient(to bottom, #FFFF 0%, #FFFF 100%) ;}
 
@@ -45,18 +45,21 @@
   height: 7%;
   display: inline;
   margin-top: 0%;
+  margin-right: 3%;
 }
 
   #MapMarker{
   height: 7%;  
   width: 7%;
   display: inline;
+  margin-right: 3%;
   }
 
   #Location{
     text-decoration: none;
     color: black;
     display: inline;
+
   }
 
   #editprofile{display: inline;
@@ -64,7 +67,10 @@
 
 a, p {vertical-align: top;
   font-weight: bold;
-margin: 0;}
+margin: 0;
+font-size: large;}
+
+h1 {font-size: xx-large;}
 
 #Description{margin-top: 2%;
               margin-bottom: 5%;}
