--- a/2_Practice_Assigments/9_User_Card/style.css
+++ b/2_Practice_Assigments/9_User_Card/style.css
@@ -8,11 +8,11 @@
  
   .ContainerParent{
    width: 70%;
-   height: 550px;
-   border: 1% solid #e8e8e8;
+   height: 450px;
    margin: 5% auto;
    position: relative;
    border: 4px solid #e4e4e4;
+   overflow: hidden;
    /* background: linear-gradient(to bottom,#17a2b8 30%,#ffff 30% 100%); */
  
  }
