--- a/3_Examples/Display_grid_kevin/style2.css
+++ b/3_Examples/Display_grid_kevin/style2.css
@@ -5,7 +5,7 @@
     
   }
 
-.Containereducation{
+/* .Containereducation{
     height: 500px;
     width: auto;
     border: 4px solid #cfcfcf;
@@ -32,5 +32,29 @@
     padding-left: 3%;
     margin-top: 1%;
     flex: 5;
+} */
+
+.Containereducation{
+    display: grid;
+    height: 100px;
+    grid-template-columns: 30% 50%;
+    grid-template-rows: 30% 50%;
+    background-color: aqua;
+    border: 1px solid black;
 }
 
+#ater-1 {
+    height: 50px;
+    grid-column: 2;
+    grid-row: 2;
+    background-color: blueviolet;
+    overflow: scroll;
+  }
+
+  #ater-2 {
+    height: 50px;
+    grid-column: 1;
+    grid-row: 1;
+    background-color: pink;
+    overflow: scroll;
+  }
